# widget-ai-livrerjardiner

./: .gitignore  README.md  ROADMAP.md  index.html  livrerjardiner-widget.umd.js  main.py  package-lock.json  package.json  vite.config.ts  widget-ai-livrerjardiner.css
backend/: README.md  ROADMAP.md  auth.py  config.py  crud.py  database.py  llm_logic.py  main.py  models.py  pdf_utils.py  pyproject.toml  requirements.txt  schemas.py  services.py  test.db  utils.py
backend/.cursor/rules/: architecture-rules.mdc
backend/SQL/: products.csv  table.sql
backend/SQL/script/: import_product.py  products.csv
backend/docs/: README.md  ROADMAP.md  help.md  my-rules.mdc  test.md
backend/requirements/: dev.txt  requirements.txt
backend/src/: config.py  database.py  main.py
backend/src/addresses/: config.py  constants.py  dependencies.py  exceptions.py  models.py  repositories.py  router.py  service.py  utils.py
backend/src/auth/: __init__.py  config.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  security.py  service.py  utils.py
backend/src/categories/: __init__.py  config.py  constants.py  dependencies.py  exceptions.py  models.py  repositories.py  router.py  service.py  utils.py
backend/src/core/: config.py  database.py  schemas.py  security.py
backend/src/database/: models.py
backend/src/email/: README.md  config.py  dependencies.py  models.py  sender.py  services.py  smtp_sender.py
backend/src/llm/: README.md  config.py  constants.py  dependencies.py  exceptions.py  interfaces.py  models.py  utils.py  (+5 more)
backend/tests/: conftest.py
(+173 files in other folders)
